[#86] docs: 기존의 API 문서에 header 추가

--- a/src/docs/asciidoc/meal-data.adoc
+++ b/src/docs/asciidoc/meal-data.adoc
@@ -14,11 +14,17 @@ endif::[]
 
 === Request
 
+==== Header
+
+include::{snippets}/meal-data-list/request-headers.adoc[]
+
+==== Parameter
+
 include::{snippets}/meal-data-list/query-parameters.adoc[]
 
-한글은 URI상에서 인코딩되어 보여집니다. (keyword="통")
-
 include::{snippets}/meal-data-list/http-request.adoc[]
+
+한글은 URI상에서 인코딩되어 보여집니다. (keyword="통")
 
 === Response
 
