[#95] docs: Parameter가 추가된 API 관련 문서 수정

--- a/src/docs/asciidoc/meal-data.adoc
+++ b/src/docs/asciidoc/meal-data.adoc
@@ -42,6 +42,10 @@ include::{snippets}/meal-data-details/request-headers.adoc[]
 
 include::{snippets}/meal-data-details/path-parameters.adoc[]
 
+==== Parameter
+
+include::{snippets}/meal-data-details/query-parameters.adoc[]
+
 include::{snippets}/meal-data-details/http-request.adoc[]
 
 === Response
