[#84] docs: auth.adoc 생성 및 index.adoc에 추가

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -9,3 +9,5 @@
 include::{docdir}/src/docs/asciidoc/meal-data.adoc[]
 
 include::{docdir}/src/docs/asciidoc/member.adoc[]
+
+include::{docdir}/src/docs/asciidoc/auth.adoc[]
