[#84] docs: adoc 수정

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -11,3 +11,5 @@ include::{docdir}/src/docs/asciidoc/meal-data.adoc[]
 include::{docdir}/src/docs/asciidoc/member.adoc[]
 
 include::{docdir}/src/docs/asciidoc/auth.adoc[]
+
+include::{docdir}/src/docs/asciidoc/oauth.adoc[]
