--- a/src/docs/asciidoc/member.adoc
+++ b/src/docs/asciidoc/member.adoc
@@ -18,7 +18,7 @@ endif::[]
 
 include::{snippets}/modify-member-info/request-headers.adoc[]
 
-==== Parameter
+==== Body
 
 include::{snippets}/modify-member-info/http-request.adoc[]
 
@@ -40,8 +40,6 @@ include::{snippets}/modify-member-info-duplicated-nickname/http-response.adoc[]
 
 include::{snippets}/remove-member/request-headers.adoc[]
 
-==== Parameter
-
 include::{snippets}/remove-member/http-request.adoc[]
 
 === Response
@@ -62,13 +60,12 @@ include::{snippets}/remove-member-not-found/http-response.adoc[]
 
 include::{snippets}/member-profile/request-headers.adoc[]
 
-==== Parameter
-
 include::{snippets}/member-profile/http-request.adoc[]
 
 === Response
 
 ==== 200 OK
+
 include::{snippets}/member-profile/http-response.adoc[]
 
 ==== 404 NOT FOUND
