[#117] docs: post.adoc 추가 및 index.adoc 수정

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -13,3 +13,5 @@ include::{docdir}/src/docs/asciidoc/member.adoc[]
 include::{docdir}/src/docs/asciidoc/auth.adoc[]
 
 include::{docdir}/src/docs/asciidoc/oauth.adoc[]
+
+include::{docdir}/src/docs/asciidoc/post.adoc[]
