[#99] docs: 식사 기록 등록 API 문서화

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -15,3 +15,5 @@ include::{docdir}/src/docs/asciidoc/auth.adoc[]
 include::{docdir}/src/docs/asciidoc/oauth.adoc[]
 
 include::{docdir}/src/docs/asciidoc/post.adoc[]
+
+include::{docdir}/src/docs/asciidoc/meal-log.adoc[]
