--- a/src/docs/asciidoc/meal-log.adoc
+++ b/src/docs/asciidoc/meal-log.adoc
@@ -33,3 +33,27 @@ include::{snippets}/meal-log-add-meal-data-not-found/http-response.adoc[]
 ==== 404 NOT FOUND
 include::{snippets}/meal-log-add-member-not-found/http-response.adoc[]
 
+
+== 식사 기록 목록 조회 API
+
+=== Request
+
+==== Header
+
+include::{snippets}/meal-log-get-meal-log-list/request-headers.adoc[]
+
+==== Request
+
+include::{snippets}/meal-log-get-meal-log-list/query-parameters.adoc[]
+
+==== Parameter
+
+include::{snippets}/meal-log-get-meal-log-list/http-request.adoc[]
+
+
+=== Response
+
+==== 200 OK
+thumbnailUrl이 존재하지 않을 경우 null 전달
+include::{snippets}/meal-log-get-meal-log-list/http-response.adoc[]
+
