--- a/src/docs/asciidoc/member.adoc
+++ b/src/docs/asciidoc/member.adoc
@@ -138,7 +138,7 @@ include::{snippets}/today-nutrients/http-request.adoc[]
 
 include::{snippets}/today-nutrients/http-response.adoc[]
 
-==== 400 NOT FOUND
+==== 404 NOT FOUND
 
 include::{snippets}/today-nutrients-not-found/http-response.adoc[]
 
@@ -159,9 +159,35 @@ include::{snippets}/weekly-intake/http-request.adoc[]
 === Response
 
 ==== 200 OK
+각 요일별 합산된 칼로리 값
 
 include::{snippets}/weekly-intake/http-response.adoc[]
 
-==== 400 NOT FOUND
+==== 404 NOT FOUND
 
 include::{snippets}/weekly-intake-not-found/http-response.adoc[]
+
+== 월간 섭취량 조회 API
+
+=== Request
+
+==== Header
+
+include::{snippets}/monthly-intake/request-headers.adoc[]
+
+==== Path Variable
+
+include::{snippets}/monthly-intake/query-parameters.adoc[]
+
+include::{snippets}/monthly-intake/http-request.adoc[]
+
+=== Response
+
+==== 200 OK
+각 주차별 합산된 칼로리 값
+
+include::{snippets}/monthly-intake/http-response.adoc[]
+
+==== 404 NOT FOUND
+
+include::{snippets}/monthly-intake-not-found/http-response.adoc[]
