--- a/src/docs/asciidoc/meal-log.adoc
+++ b/src/docs/asciidoc/meal-log.adoc
@@ -31,6 +31,30 @@ include::{snippets}/meal-log-add-meal-data-not-found/http-response.adoc[]
 ==== 404 NOT FOUND
 include::{snippets}/meal-log-add-member-not-found/http-response.adoc[]
 
+== 식사 기록 수정 API
+
+=== Request
+
+==== Header
+
+include::{snippets}/meal-log-modify/request-headers.adoc[]
+
+==== Path Variable
+
+include::{snippets}/meal-log-modify/path-parameters.adoc[]
+
+include::{snippets}/meal-log-modify/http-request.adoc[]
+
+=== Response
+
+==== 204 NO CONTENT
+include::{snippets}/meal-log-modify/http-response.adoc[]
+
+==== 404 NOT FOUND
+include::{snippets}/meal-log-modify-meal-log-not-found/http-response.adoc[]
+
+==== 404 NOT FOUND
+include::{snippets}/meal-log-modify-meal-data-not-found/http-response.adoc[]
 
 == 식사 기록 목록 조회 API
 
