[#180] docs: sse.adoc 추가 및 순서 변경

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -6,14 +6,16 @@
 :toclevels: 2
 :sectlinks:
 
-include::{docdir}/src/docs/asciidoc/meal-data.adoc[]
+include::{docdir}/src/docs/asciidoc/oauth.adoc[]
 
 include::{docdir}/src/docs/asciidoc/member.adoc[]
 
 include::{docdir}/src/docs/asciidoc/auth.adoc[]
 
-include::{docdir}/src/docs/asciidoc/oauth.adoc[]
+include::{docdir}/src/docs/asciidoc/sse.adoc[]
 
-include::{docdir}/src/docs/asciidoc/post.adoc[]
+include::{docdir}/src/docs/asciidoc/meal-data.adoc[]
 
 include::{docdir}/src/docs/asciidoc/meal-log.adoc[]
+
+include::{docdir}/src/docs/asciidoc/post.adoc[]
