--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -19,3 +19,5 @@ include::{docdir}/src/docs/asciidoc/meal-data.adoc[]
 include::{docdir}/src/docs/asciidoc/meal-log.adoc[]
 
 include::{docdir}/src/docs/asciidoc/post.adoc[]
+
+include::{docdir}/src/docs/asciidoc/comment.adoc[]
