[#189] docs: like.adoc 생성 및 index.adoc에 추가

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -21,3 +21,5 @@ include::{docdir}/src/docs/asciidoc/meal-log.adoc[]
 include::{docdir}/src/docs/asciidoc/post.adoc[]
 
 include::{docdir}/src/docs/asciidoc/comment.adoc[]
+
+include::{docdir}/src/docs/asciidoc/like.adoc[]
