--- a/src/docs/asciidoc/comment.adoc
+++ b/src/docs/asciidoc/comment.adoc
@@ -50,4 +50,33 @@ include::{snippets}/add-comment-not-found-comment/http-response.adoc[]
 
 include::{snippets}/add-comment-illegal/http-response.adoc[]
 
+== 댓글 상세 조회 API
+
+=== Request
+
+==== Header
+
+include::{snippets}/get-comment-details/request-headers.adoc[]
+
+==== Path Variable
+
+include::{snippets}/get-comment-details/path-parameters.adoc[]
+
+==== Body
+
+include::{snippets}/get-comment-details/http-request.adoc[]
+
+=== Response
+
+==== 200 OK
+
+include::{snippets}/get-comment-details/http-response.adoc[]
+
+==== 404 NOT FOUND
+
+include::{snippets}/get-comment-details-not-found-member/http-response.adoc[]
+
+include::{snippets}/get-comment-details-not-found-post/http-response.adoc[]
+
+include::{snippets}/get-comment-details-not-found-comment/http-response.adoc[]
 
