--- a/src/docs/asciidoc/post.adoc
+++ b/src/docs/asciidoc/post.adoc
@@ -32,6 +32,34 @@ include::{snippets}/add-post/http-response.adoc[]
 
 include::{snippets}/add-post-not-found/http-response.adoc[]
 
+== 피드 상세 조회 API
+
+=== Request
+
+==== Header
+
+include::{snippets}/get-post/request-headers.adoc[]
+
+==== Path Variable
+
+include::{snippets}/get-post/path-parameters.adoc[]
+
+==== Body
+
+include::{snippets}/get-post/http-request.adoc[]
+
+=== Response
+
+==== 200 OK
+
+include::{snippets}/get-post/http-response.adoc[]
+
+==== 404 NOT FOUND
+
+include::{snippets}/get-post-not-found-member/http-response.adoc[]
+
+include::{snippets}/get-post-not-found-post/http-response.adoc[]
+
 == 피드 좋아요 API
 
 === Request
