[#216] docs: comment.adoc 수정

--- a/src/docs/asciidoc/comment.adoc
+++ b/src/docs/asciidoc/comment.adoc
@@ -110,6 +110,36 @@ include::{snippets}/modify-comment-not-found-post/http-response.adoc[]
 
 include::{snippets}/modify-comment-not-found-comment/http-response.adoc[]
 
+== 댓글 삭제 API
+
+=== Request
+
+==== Header
+
+include::{snippets}/remove-comment/request-headers.adoc[]
+
+==== Path Variable
+
+include::{snippets}/remove-comment/path-parameters.adoc[]
+
+==== Body
+
+include::{snippets}/remove-comment/http-request.adoc[]
+
+=== Response
+
+==== 204 NO CONTENT
+
+include::{snippets}/remove-comment/http-response.adoc[]
+
+==== 404 NOT FOUND
+
+include::{snippets}/remove-comment-not-found-member/http-response.adoc[]
+
+include::{snippets}/remove-comment-not-found-post/http-response.adoc[]
+
+include::{snippets}/remove-comment-not-found-comment/http-response.adoc[]
+
 == 댓글 좋아요 API
 
 === Request
