--- a/src/docs/asciidoc/member.adoc
+++ b/src/docs/asciidoc/member.adoc
@@ -216,3 +216,29 @@ include::{snippets}/yearly-intake/http-response.adoc[]
 ==== 404 NOT FOUND
 
 include::{snippets}/yearly-intake-not-found/http-response.adoc[]
+
+== 내가 쓴 피드 조회 API
+
+=== Request
+
+==== Header
+
+include::{snippets}/get-my-post/request-headers.adoc[]
+
+==== Path Variable
+
+include::{snippets}/get-my-post/query-parameters.adoc[]
+
+==== Body
+
+include::{snippets}/get-my-post/http-request.adoc[]
+
+=== Response
+
+==== 200 OK
+
+include::{snippets}/get-my-post/http-response.adoc[]
+
+==== 404 NOT FOUND
+
+include::{snippets}/get-my-post-not-found-member/http-response.adoc[]
