--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -14,6 +14,8 @@ include::{docdir}/src/docs/asciidoc/auth.adoc[]
 
 include::{docdir}/src/docs/asciidoc/sse.adoc[]
 
+include::{docdir}/src/docs/asciidoc/my-page.adoc[]
+
 include::{docdir}/src/docs/asciidoc/meal-data.adoc[]
 
 include::{docdir}/src/docs/asciidoc/meal-log.adoc[]
