[#237] docs: post-like.adoc 문서 작성 및 index.adoc에 추가

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -24,4 +24,6 @@ include::{docdir}/src/docs/asciidoc/meal-log.adoc[]
 
 include::{docdir}/src/docs/asciidoc/post.adoc[]
 
+include::{docdir}/src/docs/asciidoc/post-like.adoc[]
+
 include::{docdir}/src/docs/asciidoc/comment.adoc[]
