--- a/src/docs/asciidoc/post.adoc
+++ b/src/docs/asciidoc/post.adoc
@@ -60,7 +60,7 @@ include::{snippets}/get-post-not-found-member/http-response.adoc[]
 
 include::{snippets}/get-post-not-found-post/http-response.adoc[]
 
-== 피드 전체 조회 API
+== 피드 전체 목록 조회 API
 
 === Request
 
@@ -81,30 +81,6 @@ include::{snippets}/all-post/http-request.adoc[]
 ==== 200 OK
 
 include::{snippets}/all-post/http-response.adoc[]
-
-== 피드 검색 API
-
-=== Request
-
-==== Header
-
-include::{snippets}/search-post/request-headers.adoc[]
-
-==== Path Variable
-
-include::{snippets}/search-post/query-parameters.adoc[]
-
-==== Body
-
-keyword=맛집
-
-include::{snippets}/search-post/http-request.adoc[]
-
-=== Response
-
-==== 200 OK
-
-include::{snippets}/search-post/http-response.adoc[]
 
 == 피드 수정 API
 
@@ -159,23 +135,3 @@ include::{snippets}/remove-post/http-response.adoc[]
 ==== 404 NOT FOUND
 
 include::{snippets}/remove-post-not-found-post/http-response.adoc[]
-
-== 인기 태그 조회 API
-
-=== Request
-
-==== Header
-
-include::{snippets}/popular-tags/request-headers.adoc[]
-
-==== Body
-
-include::{snippets}/popular-tags/http-request.adoc[]
-
-=== Response
-
-==== 200 OK
-
-인기 태그 상위 최대 10개
-
-include::{snippets}/popular-tags/http-response.adoc[]
