--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -25,3 +25,5 @@ include::{docdir}/src/docs/asciidoc/meal-log.adoc[]
 include::{docdir}/src/docs/asciidoc/post.adoc[]
 
 include::{docdir}/src/docs/asciidoc/comment.adoc[]
+
+include::{docdir}/src/docs/asciidoc/comment-like.adoc[]
