--- a/src/docs/asciidoc/recipe.adoc
+++ b/src/docs/asciidoc/recipe.adoc
@@ -75,3 +75,23 @@ include::{snippets}/recipe-add-recipe/http-response.adoc[]
 ==== 404 NOT FOUND
 
 include::{snippets}/recipe-add-recipe-member-not-found/http-response.adoc[]
+
+== 추천 레시피 목록 조회 API
+
+=== Request
+
+==== Header
+
+include::{snippets}/recipe-get-recommended-recipe/request-headers.adoc[]
+
+include::{snippets}/recipe-get-recommended-recipe/http-request.adoc[]
+
+=== Response
+
+==== 200 OK
+
+include::{snippets}/recipe-get-recommended-recipe/http-response.adoc[]
+
+==== 404 NOT FOUND
+
+include::{snippets}/recipe-get-recommended-recipe-member-not-found/http-response.adoc[]
