[#244] docs: auth.adoc 수정

--- a/src/docs/asciidoc/auth.adoc
+++ b/src/docs/asciidoc/auth.adoc
@@ -14,6 +14,10 @@ endif::[]
 
 === Request
 
+==== Header
+
+include::{snippets}/reissue-token/request-headers.adoc[]
+
 ==== Body
 
 include::{snippets}/reissue-token/http-request.adoc[]
