[#223] docs: 추천 레시피 목록 조회 추가된 예외 API 문서에 추가

--- a/src/docs/asciidoc/recipe.adoc
+++ b/src/docs/asciidoc/recipe.adoc
@@ -95,3 +95,5 @@ include::{snippets}/recipe-get-recommended-recipe/http-response.adoc[]
 ==== 404 NOT FOUND
 
 include::{snippets}/recipe-get-recommended-recipe-member-not-found/http-response.adoc[]
+
+include::{snippets}/recipe-get-recommended-recipe-recipe-not-found/http-response.adoc[]
