--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -33,3 +33,5 @@ include::{docdir}/src/docs/asciidoc/comment.adoc[]
 include::{docdir}/src/docs/asciidoc/comment-like.adoc[]
 
 include::{docdir}/src/docs/asciidoc/recipe.adoc[]
+
+include::{docdir}/src/docs/asciidoc/recipe-like.adoc[]
