[#develop] docs: 레시피 스크랩 좋아요 API 문서 변경

--- a/src/docs/asciidoc/recipe-like.adoc
+++ b/src/docs/asciidoc/recipe-like.adoc
@@ -23,6 +23,8 @@ include::{snippets}/recipe-like-add/request-headers.adoc[]
 
 include::{snippets}/recipe-like-add/path-parameters.adoc[]
 
+include::{snippets}/recipe-like-add/http-request.adoc[]
+
 === Response
 
 ==== 200 OK
