[#develop] fix: restdocs 문서 오타 수정

--- a/src/docs/asciidoc/meal-data.adoc
+++ b/src/docs/asciidoc/meal-data.adoc
@@ -72,7 +72,7 @@ include::{snippets}/meal-data-details/http-response.adoc[]
 ==== 404 NOT FOUND
 include::{snippets}/meal-data-details-not-found/http-response.adoc[]
 
-== 식품 데이터 삭제 수정 API
+== 식품 데이터 수정 API
 
 === Request
 
